schema migration to openapi
